  has been removed.
  
=== New features in 1.17 ===
* (bug 10183) Users can now add personal styles and scripts to all skins via
  User:<name>/common.css and /common.js (if user css/js is enabled)
* (bug 22748) Add anchors on Special:ListGroupRights  
* (bug 21981) Add parameter 'showfilename' to <gallery> to automatically apply
  the names of the individual files within the gallery

=== Bug fixes in 1.17 ===
* (bug 17560) Half-broken deletion moved image files to deletion archive without
  updating DB
* (bug 22666) Submitting user block form with an invalid user name no longer
  throws an error
* (bugs 22665 and 22667) User '0' can now be unblocked and have its block
  settings changed
* (bug 22606) The body of e-mail address confirmation message is now different
  when the address changed
* (bug 22664) Special:Userrights now accepts '0' as a valid user name
* (bug 5210) preload parser now parses <noinclude>, <includeonly> and redirects
* (bug 22709) IIS7 mishandles redirects generated by OutputPage::output() when
  the URL contains a colon.
* (bug 22353) Categorised recent changes now works again
* (bug 22747) "Reveal my e-mail address in notification e-mails" preference is
  now only displayed when relevant

== API changes in 1.17 ==
* (bug 22738) Allow filtering by action type on query=logevent
* (bug 22764) uselang parameter for action=parse

=== Languages updated in 1.17 ===

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.
