@@ -118,6 +118,7 @@ following names for their contribution to the product.
 * Stefano Codari
 * Str4nd
 * svip
+* Zachary Hauri
 
 == Translators ==
 * Anders Wegge Jakobsen
